--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -122,3 +122,20 @@ header img {
 .xtra-info {
   padding: 0px 15px;
 }
+
+.d-tweet {
+  margin: 0px 10px;
+  display: flex;
+  flex-direction:row;
+}
+
+.d-tweet-img-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.d-tweet-img {
+  width: 50px;
+  height: 50px;
+}
