--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -145,6 +145,37 @@ svg {
 }
 
 
+
+/*tab-content stuff*/
+
+div.tab {
+    overflow: hidden;
+    border: none;
+}
+
+/* Style the buttons inside the tab */
+div.tab button {
+    color: inherit;
+    font-family: 'Arapey', serif;
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+div.tab button:hover {
+    background-color: #888;
+}
+
+/* Create an active/current tablink class */
+div.tab button.active {
+    background-color: #666;
+}
+
 .tab-content {
   display: none;
 }
