fix an update script and adjust viz

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -217,4 +217,9 @@ div.tab button.active {
 .tick line {
   stroke: white;
   fill: white;
+  opacity: .5;
+}
+
+.tick:first-of-type {
+  display: none;
 }
